tests/ui/union/union-sized-field.stderr
error[E0277]: the size for values of type `ManuallyDrop<T>` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:4:12
   |
LL |     value: ManuallyDrop<T>,
   |            ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `ManuallyDrop<T>`, the trait `Sized` is not implemented for `ManuallyDrop<T>`, which is required by `ManuallyDrop<T>: Sized`
note: required because it appears within the type `ManuallyDrop<T>`
  --> $SRC_DIR/core/src/mem/manually_drop.rs:LL:COL
   = note: no field of a union may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | union Foo<T: ?Sized> where ManuallyDrop<T>: Sized {
   |                      ++++++++++++++++++++++++++++
help: borrowed types always have a statically known size
   |
LL |     value: &ManuallyDrop<T>,
   |            +
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     value: Box<ManuallyDrop<T>>,
   |            ++++               +

error[E0277]: the size for values of type `ManuallyDrop<T>` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:9:12
   |
LL |     value: ManuallyDrop<T>,
   |            ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `ManuallyDrop<T>`, the trait `Sized` is not implemented for `ManuallyDrop<T>`, which is required by `ManuallyDrop<T>: Sized`
note: required because it appears within the type `ManuallyDrop<T>`
  --> $SRC_DIR/core/src/mem/manually_drop.rs:LL:COL
   = note: only the last field of a struct may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | struct Foo2<T: ?Sized> where ManuallyDrop<T>: Sized {
   |                        ++++++++++++++++++++++++++++
help: borrowed types always have a statically known size
   |
LL |     value: &ManuallyDrop<T>,
   |            +
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     value: Box<ManuallyDrop<T>>,
   |            ++++               +

error[E0277]: the size for values of type `ManuallyDrop<T>` cannot be known at compilation time
  --> $DIR/union-sized-field.rs:15:11
   |
LL |     Value(ManuallyDrop<T>),
   |           ^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: within `ManuallyDrop<T>`, the trait `Sized` is not implemented for `ManuallyDrop<T>`, which is required by `ManuallyDrop<T>: Sized`
note: required because it appears within the type `ManuallyDrop<T>`
  --> $SRC_DIR/core/src/mem/manually_drop.rs:LL:COL
   = note: no field of an enum variant may have a dynamically sized type
   = help: change the field's type to have a statically known size
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | enum Foo3<T: ?Sized> where ManuallyDrop<T>: Sized {
   |                      ++++++++++++++++++++++++++++
help: borrowed types always have a statically known size
   |
LL |     Value(&ManuallyDrop<T>),
   |           +
help: the `Box` type always has a statically known size and allocates its contents in the heap
   |
LL |     Value(Box<ManuallyDrop<T>>),
   |           ++++               +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
